--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,9 +1,10 @@
-.horns {
+img {
+    margin: auto;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-    width: 100px;
-    height: 100px;
+
+    left: 0;
+    right: 0;
+    
+    top: 0;
+    bottom: 0;
 }
